# free-OKC

./: .env  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  README_PROJECT.md  README_ZH.md  config.yaml  main.py  okcvm_conversations.db  pyproject.toml  readme.md  roadmap.md  roadmap.zh.md  security.md
.claude/: settings.local.json
desktop/: .gitignore  README.md  okcvm_conversations.db  package-lock.json  package.json  playwright.config.ts  vitest.config.js
desktop/backend-bundle/: okcvm-server.spec
desktop/backend-bundle/runtime-hooks/: pyi_rth_okcvm.py
desktop/main/: backend.js  logger.js  main.js  menu.js  preload.js
desktop/resources/: .gitkeep  config.yaml
desktop/scripts/: build.sh  bundle-backend.py  dev.ps1  dev.sh
desktop/src/: preload.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/binaries/: .gitkeep
desktop/src-tauri/icons/: .gitkeep
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/commands/: backend.rs  config.rs  files.rs  mod.rs
desktop/src-tauri/src/sidecar/: health.rs  manager.rs  mod.rs
desktop/src-tauri/src/state/: app_state.rs  mod.rs
desktop/src-tauri/src/system/: mod.rs  shortcuts.rs  theme.rs  tray.rs
desktop/src-tauri/src/utils/: mod.rs  paths.rs  port.rs
desktop/src/adapter/: file-system.js  index.js  native-bridge.js  notifications.js  shortcuts.js  theme.js  updater.js
desktop/src/patches/: config.patch.js  utils.patch.js
desktop/tests/e2e/: launch.spec.ts
desktop/tests/unit/: adapter.test.js
docs/: README.md  architecture.md  backend.md  frontend.md  session_tree.md  workspace.md
frontend/: app.js  config.js  constants.js  conversationApi.js  conversationState.js  debug-sidebar.js  editor.js  elements.js  index.html  markdown.js  messageActionIcons.js  previews.js  storage.js  styles.css  test-elements.js  utils.js  workspaceApi.js
frontend/app/: browser-tabs.js  conversationPanel.js  editingController.js  historyLayout.js  index.js  messageActions.js  messageRenderer.js  streamingController.js
spec/: desktop.md  raw_kimi_okc_output.html  system_prompt.md  tools.json
spec/interfaces/: README.md  configuration.md  conversations.md  deployments.md  session.md  workspace.md
src/okcvm/: __init__.py  config.py  constants.py  json_safe.py  llm.py  logging_utils.py  registry.py  server.py  session.py  spec.py  streaming.py  vm.py  workspace.py
src/okcvm/api/: main.py  models.py
src/okcvm/storage/: __init__.py  conversations.py
src/okcvm/tools/: __init__.py  base.py  browser.py  data_sources.py  deployment.py  files.py  ipython.py  media.py  search.py  shell.py  slides.py  stubs.py  todo.py
tests/: test_api_app.py  test_api_flows.py  test_browser.py  test_config.py  test_data_sources.py  test_deployment.py  test_llm.py  test_media.py  test_registry.py  test_search.py  test_server_state.py  test_session.py  test_spec.py  test_storage_conversations.py  test_streaming.py  test_todo.py  test_tools_files.py  test_tools_slides.py  test_vm.py  test_workspace.py
