[project]
name = "okcvm"
version = "0.1.0"
description = "Open-source virtual machine container calling scheme inspired by Kimi's tool ecosystem"
readme = "README_PROJECT.md"
authors = [{name = "OK Computer"}]
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "Pillow>=10.0",
  "numpy>=1.26",
  "python-pptx>=0.6.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
