[project]
name = "okcvm"
version = "0.1.0"
description = "Open-source virtual machine container calling scheme inspired by Kimi's tool ecosystem"
readme = "README_PROJECT.md"
authors = [{name = "OK Computer"}]
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "Pillow>=10.0",
  "numpy>=1.26",
  "python-pptx>=0.6.23",
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.7",
  "python-dotenv>=1.0",
  "langchain>=0.2",
  "langchain-openai>=0.1.8",
  "selenium>=4.36.0",
  "webdriver-manager>=4.0.2",
  "pytest>=8.4.2",
  "psutil>=7.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
