[package]
name = "okcvm-desktop"
version = "0.1.0"
description = "OKCVM Desktop Application"
authors = ["OKCVM Team"]
license = "MIT"
repository = "https://github.com/kexinoh/free-OKC"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "api-all",
    "shell-sidecar",
    "system-tray",
    "global-shortcut-all",
    "notification-all",
    "dialog-all",
    "fs-all",
    "window-all",
    "updater"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
dirs = "5.0"
port_scanner = "0.1"

[features]
# 默认启用自定义协议
default = ["custom-protocol"]
# 生产构建使用自定义协议加载前端
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# 优化二进制大小
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
